--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
             .navigation, .pitch, .section1, .section2, .faq, .footer {
             padding: 10px, 0px, 10px, 0px;
             }
-            .video, .thermometer, .order, .socioal {
+            .video, .thermometer, .order, .social {
             border: 1px dotted;
             text-align: center;
             }
             .video {
             /* Internal borders have 1px width, this need to add 4 x 1px to 210px. */
-            hight: 40px;
-            line-height: 40px;
+            hight: 124px;
+            line-height: 124px;
             }
+            .thermometer, .order, .social {
+                /* line-hight to certically center: http://phorgz.net/css/vertical-align/index.html */
+                hight: 40px;
+                line-hight: 40px;
+            }
+
             div.row {
             border: 1px solid;
             }
