--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             }
             .video {
             /* Internal borders have 1px width, this need to add 4 x 1px to 210px. */
-            hight: 124px;
+            height: 124px;
             line-height: 124px;
             }
             .thermometer, .order, .social {
                 /* line-hight to certically center: http://phorgz.net/css/vertical-align/index.html */
-                hight: 40px;
-                line-hight: 40px;
+                height: 40px;
+                line-height: 40px;
             }
 
             div.row {
