--- a/index.html
+++ b/index.html
@@ -230,17 +230,18 @@
                 </div>
                 <div class="span5 copy">
                     <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                    porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-                    mollis justo velit at nunc. Fusce nec egestas sem. Donec
-                    fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-                    volutpat lorem ut congue malesuada. In facilisis scelerisque
-                    turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-                    quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-                    risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-                    rutrum, nunc leo tempus nisl, eu mollis justo velit at
-                    nunc. Fusce nec egestas sem. Donec fringilla.
+                    Vivamus luctus, lectus eu mattis volutpat, enim nulla tempor orci, 
+                    eu consectetur lorem ligula et justo. Suspendisse potenti. Interdum 
+                    et malesuada fames ac ante ipsum primis in faucibus. Aliquam erat 
+                    volutpat. Nam nec orci dolor. Fusce et dignissim massa, et aliquam
+                    nibh. Nullam aliquam eros ut ante dignissim faucibus. Aliquam 
+                    vel aliquam lectus, in tristique dui. Integer ipsum magna, 
+                    pulvinar a sapien non, dictum bibendum massa. Quisque luctus fermentum 
+                    ligula, non scelerisque sapien tempus sed. Nam vel eros in odio 
+                    blandit dignissim. In ut mauris tincidunt, dignissim dolor ac, 
+                    scelerisque enim. Proin eget risus magna. Class aptent taciti 
+                    sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                    Etiam laoreet metus eget commodo facilisis.
                     </p>
                 </div>
             </div>
@@ -248,17 +249,18 @@
             <div class="row-fluid section2">
                 <div class="span5 offset1 copy copy-right">
                     <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                    porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-                    mollis justo velit at nunc. Fusce nec egestas sem. Donec
-                    fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-                    volutpat lorem ut congue malesuada. In facilisis scelerisque
-                    turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-                    quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-                    risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-                    rutrum, nunc leo tempus nisl, eu mollis justo velit at
-                    nunc. Fusce nec egestas sem. Donec fringilla.
+                    Vivamus luctus, lectus eu mattis volutpat, enim nulla tempor orci, 
+                    eu consectetur lorem ligula et justo. Suspendisse potenti. Interdum 
+                    et malesuada fames ac ante ipsum primis in faucibus. Aliquam erat 
+                    volutpat. Nam nec orci dolor. Fusce et dignissim massa, et aliquam
+                    nibh. Nullam aliquam eros ut ante dignissim faucibus. Aliquam 
+                    vel aliquam lectus, in tristique dui. Integer ipsum magna, 
+                    pulvinar a sapien non, dictum bibendum massa. Quisque luctus fermentum 
+                    ligula, non scelerisque sapien tempus sed. Nam vel eros in odio 
+                    blandit dignissim. In ut mauris tincidunt, dignissim dolor ac, 
+                    scelerisque enim. Proin eget risus magna. Class aptent taciti 
+                    sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                    Etiam laoreet metus eget commodo facilisis.
                     </p>
                 </div>
                 <div class="span5 asset">
