for hw4 part2 #3

--- a/index.html
+++ b/index.html
@@ -15,103 +15,7 @@
         <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Hanalei' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
-        <style type="text/css">
-
-
-            /* Large desktop */
-            @media (min-width: 980px) { 
-                body {
-                    padding-top: 60px;
-                }
-                .linediv-l {
-                    border-right: 1px white solid;
-                }
-                .linediv-r {
-                    border-left: 1px white solid;
-                }
-            }
-
-            /* Landscape phones and down */
-            @media (max-width: 480px) { 
-                .copy {
-                    padding: 2.5% 10%;
-                }
-                .linediv-l {
-                    border-bottom: 1px white solid;
-                }
-                    border-top: 1px white solid;
-                }
-            }
-
-            /* All form factors */
-
-            /* Main body and headings */
-            body{
-                /*
-                font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-                */
-                font-family: 'Armata', sans-serif;
-               
-            }
-            .heading, .subheading {
-                /* font-family: 'Fauna One', serif;
-                */
-                font-family: 'Armata', sans-serif;
-                
-                /*font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
-                */
-                text-align: center;
-            }
-            p.lead {
-                padding-top: 1.5%;
-                font-size: 24px;
-                line-height: 30px;
-            }
-            p {
-                font-size: 18px;
-                line-height: 24px;
-            }
-
-            /* Video pitch and Action */
-            .pitch {
-                padding: 2.5% 0%;
-            }
-            .order {
-                padding: 2% 0%;
-            }
-            .actions {
-                /* background-color: #343434;
-                */
-                background-color: #99CC99;
-                padding: 3% 0%;
-            }
-            .video, .thermometer, .order, .social, .statistics {
-                text-align: center;
-            }
-            .statistics h3, .statistics p {
-                color: white;
-            }
-
-            /* Marketing Copy and Footer */
-            .copy {
-                padding-top: 2.5%;
-                padding-bottom: 2.5%;
-                text-align: justify;
-            }
-            .asset {
-                padding: 2.5% 0%;
-            }
-            .footer {
-                color: #cccccc;
-                text-align: center;
-            }
-            .footer p {
-                font-size: 11px;
-            }
-            .footer a {
-                color: #ccccff;
-            }
-        </style>
+        <link rel='stylesheet' href='/stylesheets/bitstarter.css' />
     </head>
     <body>
 
@@ -154,27 +58,27 @@
             <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
             <!-- www.google.com/fonts/specimen/Ubuntu -->
             <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
-            <div class="row-fluid heading">
+            <div class="row-fluid myappname-heading">
                 <div class="span12">
                     <h1>Korat</h1>
                 </div>
             </div> 
-            <div class="row-fluid subheading">
+            <div class="row-fluid myappname-subheading">
                 <div class="span12">
                     <!-- Special typography from Bootstrap for lead paragraph. -->
                     <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-                    <p class="lead">Real time WEB service for M2M.</p>
+                    <p class="myappname-lead">Real time WEB service for M2M.</p>
                 </div>
             </div>
-            <div class="row-fluid pitch">
-                <div class="span5 offset1 video">
+            <div class="row-fluid myappname-pitch">
+                <div class="span5 offset1 myappname-video">
                     <img class="img-polaroid" src="http://placehold.it/480x300">
                 </div>
 
                 <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
-                <div class="span5 actions">
+                <div class="span5 myappname-actions">
                     <div class="span8 offset2">
-                        <div class="statistics">
+                        <div class="myappname-statistics">
                             <div class="span4">
                                 <!-- linediv-l and linediv-r give dividing lines that look
                                 different in horizontal and vertical layouts, illustrating
@@ -198,17 +102,17 @@
                     <div class="span10 offset1">
                         <!-- Bootstrap progress bar -->
                         <!-- http://twitter.github.io/bootstrap/components.html#progress -->
-                        <div class="thermometer progress active">
+                        <div class="myappname-thermometer progress active">
                             <div class="bar bar-success" style="width: 30%;"></div>
                             <div class="bar bar-warning" style="width: 70%;"></div>
                         </div>
                     </div>
-                    <div class="span6 offset3 order">
+                    <div class="span6 offset3 myappname-order">
                         <!-- Standard Bootstrap button. -->
                         <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
                         <button class="btn btn-success btn-large">Preorder</button>
                     </div>
-                    <div class="span8 offset2 social">
+                    <div class="span8 offset2 myappname-social">
                         <!-- Social buttons are not included in default Bootstrap. -->
                         <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
                         <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
@@ -222,13 +126,13 @@
             <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
             <!-- http://placehold.it -->
             <div class="row-fluid section1">
-                <div class="span5 offset1 asset">
+                <div class="span5 offset1 myappname-asset">
                     <!--
                     <img class="img-polaroid" src="http://placehold.it/480x300">
                     -->
                     <img class="img-polaroid" src="/images/korat-phone.png">
                 </div>
-                <div class="span5 copy">
+                <div class="span5 myappname-copy">
                     <p>
                     Vivamus luctus, lectus eu mattis volutpat, enim nulla tempor orci, 
                     eu consectetur lorem ligula et justo. Suspendisse potenti. Interdum 
@@ -247,7 +151,7 @@
             </div>
 
             <div class="row-fluid section2">
-                <div class="span5 offset1 copy copy-right">
+                <div class="span5 offset1 myappname-copy copy-right">
                     <p>
                     Vivamus luctus, lectus eu mattis volutpat, enim nulla tempor orci, 
                     eu consectetur lorem ligula et justo. Suspendisse potenti. Interdum 
@@ -263,7 +167,7 @@
                     Etiam laoreet metus eget commodo facilisis.
                     </p>
                 </div>
-                <div class="span5 asset">
+                <div class="span5 myappname-asset">
                     <img class="img-polaroid" src="http://placehold.it/480x300">
                 </div>
             </div>
@@ -273,18 +177,18 @@
             <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
             <div class="row-fluid faq">
                 <div class="span10 offset1">
-                    <h3>Korat API FAQ</h3>
+                    <h3>Korat API </h3>
                     <div class="accordion" id="accordion2">
                         <div class="accordion-group">
                             <div class="accordion-heading">
                                 <a class="accordion-toggle" data-toggle="collapse"
                                     data-parent="#accordion2" href="#collapseOne">
-                                    What does FAQ stand for?
+                                    REST API specifications.
                                 </a>
                             </div>
                             <div id="collapseOne" class="accordion-body collapse">
                                 <div class="accordion-inner">
-                                    Frequently Asked Question.
+                                    Basice functions.
                                 </div>
                             </div>
                         </div>
@@ -292,12 +196,12 @@
                             <div class="accordion-heading">
                                 <a class="accordion-toggle" data-toggle="collapse"
                                     data-parent="#accordion2" href="#collapseTwo">
-                                    What's a Frequently Asked Question?
+                                    How to use?
                                 </a>
                             </div>
                             <div id="collapseTwo" class="accordion-body collapse">
                                 <div class="accordion-inner">
-                                    A question which is commonly asked by users.
+                                    client program samples.
                                 </div>
                             </div>
                         </div>
@@ -308,7 +212,7 @@
 
             <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
             <!-- http://creativecommons.org/licenses/ -->
-            <div class="row-fluid footer">
+            <div class="row-fluid myappname-footer">
                 <div class="span12">
                     <p>This work is licensed under
                     the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
