--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
             <div class="row-fluid myappname-heading">
                 <div class="span12">
-                    <h1>Korat</h1>
+                    <h1>Product: Development Version Korat</h1>
                 </div>
             </div> 
             <div class="row-fluid myappname-subheading">
