--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
         <link href='http://fonts.googleapis.com/css?family=Hanalei' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
         <link rel='stylesheet' href='/stylesheets/bitstarter.css' />
+	<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+	<script type="text/javascript" 
+		src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51fe493604d6a32f">
+	</script>
+	<script type="text/javascript">
+
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-42940797-1']);
+	_gaq.push(['_trackPageview']);
+
+	(function() {
+	 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	 ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	 })();
+
+	</script>
     </head>
     <body>
 
@@ -112,12 +129,17 @@
                         <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
                         <button class="btn btn-success btn-large">Preorder</button>
                     </div>
-                    <div class="span8 offset2 myappname-social">
-                        <!-- Social buttons are not included in default Bootstrap. -->
-                        <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-                        <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-                        <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-                    </div>
+                    <div class="span8 offset2 social">
+		    <!-- AddThis Button BEGIN -->
+		    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+		    <a class="addthis_button_preferred_1"></a>
+		    <a class="addthis_button_preferred_2"></a>
+		    <a class="addthis_button_preferred_3"></a>
+		    <a class="addthis_button_preferred_4"></a>
+		    <a class="addthis_button_compact"></a>
+		    <a class="addthis_counter addthis_bubble_style"></a>
+		    </div>
+		    <!-- AddThis Button END -->
                 </div>
             </div>
 
@@ -222,5 +244,13 @@
                 </div>
             </div>
         </div>
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-42940797-1', 'rockos.co.jp');
+	ga('send', 'pageview');
+	</script>
     </body>
 </html>
