add bitcoin buttom

--- a/index.html
+++ b/index.html
@@ -127,7 +127,14 @@
                     <div class="span6 offset3 myappname-order">
                         <!-- Standard Bootstrap button. -->
                         <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-                        <button class="btn btn-success btn-large">Preorder</button>
+                        <!--
+			<button class="btn btn-success btn-large">Preorder</button>
+			-->
+			<a class="coinbase-button" data-code="7e51ef3d6f37a524bf72b812fe5ca73a" 
+			href="https://coinbase.com/checkouts/7e51ef3d6f37a524bf72b812fe5ca73a">
+				Pay With Bitcoin</a>
+			<script src="https://coinbase.com/assets/button.js" 
+				type="text/javascript"></script>
                     </div>
                     <div class="span8 offset2 social">
 		    <!-- AddThis Button BEGIN -->
